--- a/index.html
+++ b/index.html
@@ -14,12 +14,6 @@
     <link rel="stylesheet" href="CSS/styles.css" />
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt consectetur
-      et fugiat harum minima veritatis eaque autem alias officia facere.
-    </p>
+    <a href="#" class="link-arrow">Learn More</a>
   </body>
 </html>
