Build the Card component.

--- a/index.html
+++ b/index.html
@@ -13,15 +13,5 @@
     <link rel="stylesheet" href="CSS/normalize.css" />
     <link rel="stylesheet" href="CSS/styles.css" />
   </head>
-  <body>
-    <span>
-      <button class="btn btn--block">
-        <svg class="icon-btn">
-          <use xlink:href="images/sprite.svg#search"></use>
-        </svg>
-        search
-      </button>
-    </span>
-    <a href="#" class="btn btn--block">get started</a>
-  </body>
+  <body></body>
 </html>
