--- a/index.html
+++ b/index.html
@@ -13,5 +13,39 @@
     <link rel="stylesheet" href="CSS/normalize.css" />
     <link rel="stylesheet" href="CSS/styles.css" />
   </head>
-  <body></body>
+  <body style="padding: 5rem">
+    <div class="card testimonial">
+      <div class="grid grid--1x2">
+        <div class="testimonial__image">
+          <img src="images/testimonial.jpg" alt="A happy, smiling customer." />
+          <span class="icon-container icon-container--accent">
+            <svg class="icon icon--white icon--small">
+              <use xlink:href="images/sprite.svg#quotes"></use>
+            </svg>
+          </span>
+        </div>
+        <blockquote class="quote testimonial__body">
+          <p class="quote__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
+            consequatur deleniti. Ut iusto, odit officiis repudiandae quas
+            dolore, voluptatibus enim ratione incidunt corporis, debitis sunt ab
+            aperiam quidem sint minus!
+          </p>
+          <footer>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary quote__line">
+                  <use xlink:href="images/sprite.svg#line"></use>
+                </svg>
+              </div>
+              <div class="media__body quote __body">
+                <h3 class="media__title quote__author">John Smith</h3>
+                <p class="quote__organization">ABC Company</p>
+              </div>
+            </div>
+          </footer>
+        </blockquote>
+      </div>
+    </div>
+  </body>
 </html>
